--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Text Summarizer</title>
 </head>
 <body>
+    <h2>Text Summarization </h2>
+    <br>
     <form method="POST" action="/">
         <textarea name="text" rows="10" cols="30"></textarea>
         <input type="submit" value="Summarize">
